- some speed enhancements, thanks to Tobias Bratfisch for providing patches
- if the VPS time differs from the start time of an event the VPS marker is now  'v' 
  instead of 'V'
- the first run of the background threads (searchtimer, switchtimer, conflict check) is now
  triggered by the first call to cPlugin::MainThreadHook instead of waiting 20s after
  VDRs startup.

fixes:
- fixed a crash when pressing 'Ok' in an empty timers done menu
- fixed a crash when using the progressbar and events with 0 duration exist, thanks 
  to egal@vdrportal
- when an incomplete recording triggers a search timer update for a search timer 
  with 'avoid repeats' now running events are ignored for the repeats.
- now using cCondWait::Wait instead of cCondWait:SleepMs to avoid shutdown problems,
  thanks to e9hack@vdrportal for providing a patch
- fixed line breaks in SVDRP command LSTT, thanks to Andreas Mair for providing a 
  patch
- improved response time when canceling the search timer thread
- fixed a segfault occurring when navigating to a userdefined epg menu that has expired
  in the meantime, thanks to Mike Constabel for reporting
- the day selection menu in the timer edit menu was hidden
- if an event was matched by multiple search timers with 'announce only' setting, it was
  also listed more than once. Thanks to Andreas Mair for reporting.
- fixed a bug in search timer announcements concerning the display of the corresponding
  search timer
- fixed some memory leaks, thanks to Bittor Corl for providing a patch
- some fixes to compile with gcc-4.4, thanks to firefly@vdrportal for providing a patch


2008-04-29: Version 0.9.24
new:
- support for vdr-1.6.x/1.7.x
- speedup in searching and search timer updates (about 25%)
- speedup in EPG menues, thanks to patch authors from http://www.open7x0.org
- support for VDRSymbols font (activate it with 'WarEagle=1' in epgsearchmenu.conf)
- the EPG command 'Search in recordings' now evaluates the info.vdr instead of the